remaining updates from i2b2-transmart beta version